<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/products_fragment"
        android:icon="@drawable/ic_burger"
        android:title="@string/fragment_products" />

    <item
        android:id="@+id/orders_fragment"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/fragment_orders" />

    <item android:title="User">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/drawer_logout"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="Logout" />
            </group>
        </menu>
    </item>

</menu>