<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_authentication_fragment"
            app:destination="@id/authentication_fragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_home_fragment_to_products_fragment"
            app:destination="@id/products_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_orders_fragment"
            app:destination="@id/orders_fragment" />
    </fragment>

    <action
        android:id="@+id/action_global_to_auth_fragment"
        app:destination="@id/authentication_fragment"
        app:popUpTo="@id/navigation"
        app:popUpToInclusive="true">
    </action>

    <action
        android:id="@+id/action_global_to_home_fragment"
        app:destination="@id/home_fragment"
        app:popUpTo="@id/home_fragment"
        app:popUpToInclusive="false">
    </action>

    <action
        android:id="@+id/action_global_to_loginfragment_fragment"
        app:destination="@id/login_fragment"
        app:popUpTo="@id/navigation"
        app:popUpToInclusive="true">
    </action>

    <fragment
        android:id="@+id/login_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/products_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.ProductsFragment"
        android:label="@string/fragment_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_products_fragment_to_cart_fragment"
            app:destination="@id/cart_fragment" />
    </fragment>

    <fragment
        android:id="@+id/cart_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.CartFragment"
        android:label="@string/fragment_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cart_fragment_to_order_detail_fragment"
            app:destination="@id/order_detail_fragment"
            app:popUpTo="@id/home_fragment"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/orders_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.OrdersFragment"
        android:label="@string/fragment_orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_orders_fragment_to_order_detail_fragment"
            app:destination="@id/order_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/order_detail_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.OrderDetailsFragment"
        android:label="@string/fragment_order_detail"
        tools:layout="@layout/fragment_order_details">

        <argument
            android:name="orderId"
            app:argType="long"
            android:defaultValue="-1L" />

    </fragment>

    <fragment
        android:id="@+id/authentication_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.AuthenticationFragment"
        android:label="@string/authentication_fragment"
        tools:layout="@layout/fragment_authentication">

        <argument
            android:name="redirectToLogin"
            app:argType="boolean"
            android:defaultValue="false" />

        <action
            android:id="@+id/action_authentication_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />
        <action
            android:id="@+id/action_authentication_fragment_to_registration_fragment"
            app:destination="@id/registration_fragment" />
    </fragment>

    <fragment
        android:id="@+id/registration_fragment"
        android:name="hu.unideb.inf.ordertrackerandroid.fragment.RegistrationFragment"
        android:label="@string/fragment_registration"
        tools:layout="@layout/fragment_registration">
    </fragment>

</navigation>
